--- a/cpp/sets/sets.vcxproj
+++ b/cpp/sets/sets.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{02138a6e-bb0e-439e-bad1-2bfe828d99dc}</ProjectGuid>
-    <RootNamespace>vectors</RootNamespace>
+    <ProjectGuid>{fe941ce2-5c2a-47f6-9b50-5879a6995117}</ProjectGuid>
+    <RootNamespace>sets</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>18_stl_vectors</ProjectName>
+    <ProjectName>20_stl_sets</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
