--- a/cpp11/auto_type_inference/auto_type_inference.vcxproj
+++ b/cpp11/auto_type_inference/auto_type_inference.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{44e4830f-a0f9-4c9b-8aae-b066bfedeb6f}</ProjectGuid>
-    <RootNamespace>braceinitialization</RootNamespace>
+    <ProjectGuid>{4a79db14-a1c0-43ae-a4c5-904e25a02e7c}</ProjectGuid>
+    <RootNamespace>autotypeinference</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>01_brace_initialization</ProjectName>
+    <ProjectName>02_auto_type_inference</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -141,9 +141,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="myclass.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
